--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@ iframe {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 61px 130px 60px 148px;
+  padding: 61px 70px 60px 70px;
 }
 .contact100-pic img {
   max-width: 100%;
@@ -456,7 +456,7 @@ body {
   background: rgb(31 15 25 / 66%);
   padding: 1em;
   border-radius: 42px;
-  margin: 2em;
+  margin: 7em 17em;
 }
 .bg-contactBg {
   width: 100%;
@@ -471,9 +471,7 @@ body {
   align-items: center;
   padding: 15px;
 }
-.txtLg{
 
-}
 @media (max-width: 992px) {
   .opacityContainer {
     background: rgb(31 15 25 / 47%);
@@ -499,6 +497,12 @@ body {
     color: black;
     font-size: 14px;
   }
+  .opacityContainer {
+    background: rgb(31 15 25 / 66%);
+    padding: 1em;
+    border-radius: 42px;
+    margin: 1em;
+}
 }
 
 @media (max-width: 700px) and (min-width: 300px) {
@@ -512,13 +516,15 @@ body {
 }
 .txtLg {
   font-size: 28px;
+  line-height: 38px;
 }
 .bg-contactBg {
   background-image: url(../images/bg-01.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100% 100%;
+  background-position: right;
+  /* background-size: 102%; */
 }
 }
 
@@ -534,6 +540,7 @@ body {
     color: black;
     font-size: 40px;
   }
+
   .wrap-input100 {
     position: relative;
     width: 100%;
